--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,14 @@ h1 {
 }
 
 h2 {
-  font-size: 3.25rem;
+  font-size: 2.5rem;
+}
+
+@media (max-width: 460px) {
+  h2 {
+    font-size: 1.75rem;
+    line-height: 1.2;
+  }
 }
 
 a {
