--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,19 @@ body {
   margin: 0;
 }
 
+#main {
+  margin: 30px 8px;
+  padding: 15px;
+  border-radius: 5px;
+  background: #eee;
+}
+
+@media (max-width: 460px) {
+  #main {
+    margin: 0;
+  }
+}
+
 h1 {
   font-size: 4rem;
   margin-bottom: 0;
@@ -47,19 +60,6 @@ a:visited {
   color: #74638f;
 }
 
-#main {
-  margin: 30px 8px;
-  padding: 15px;
-  border-radius: 5px;
-  background: #eee;
-}
-
-@media (max-width: 460px) {
-  #main {
-    margin: 0;
-  }
-}
-
 img {
   max-width: 100%;
   display: block;
@@ -80,6 +80,12 @@ img {
 @media (max-width: 460px) {
   #img-caption {
     font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 460px) {
+  figure {
+    margin: 0;
   }
 }
 
